--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "See how to configure Jest and Cypress with React, Babel, and Webpack",
   "main": "index.js",
   "scripts": {
+    "test": "jest",
     "dev": "webpack-serve",
     "build": "webpack --mode=production",
     "postbuild": "cp ./public/index.html ./dist/index.html",
@@ -11,7 +12,7 @@
     "lint": "eslint .",
     "format": "prettier \"**/*.js\" --write",
     "validate": "npm run lint && npm run build",
-    "setup": "npm run setup && npm run validate"
+    "setup": "npm install && npm run validate"
   },
   "keywords": [],
   "author": "Kent C. Dodds <kent@doddsfamily.us> (http://kentcdodds.com/)",
@@ -30,6 +31,8 @@
     "eslint": "^5.0.1",
     "eslint-config-kentcdodds": "^14.0.0",
     "file-loader": "^1.1.11",
+    "jest": "^26.6.3",
+    "path": "^0.12.7",
     "prettier": "^1.13.7",
     "prop-types": "^15.6.2",
     "serve": "^9.1.0",
