--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.51",
     "@babel/preset-env": "^7.0.0-beta.51",
     "@babel/preset-react": "^7.0.0-beta.51",
+    "@testing-library/react": "^11.2.6",
     "babel-core": "7.0.0-bridge.0",
     "babel-loader": "^8.0.0-beta.4",
     "babel-plugin-emotion": "^9.2.4",
