--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.51",
     "@babel/preset-env": "^7.0.0-beta.51",
     "@babel/preset-react": "^7.0.0-beta.51",
+    "@emotion/jest": "^11.3.0",
     "@testing-library/react": "^11.2.6",
     "babel-core": "7.0.0-bridge.0",
     "babel-loader": "^8.0.0-beta.4",
@@ -34,6 +35,7 @@
     "file-loader": "^1.1.11",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
+    "jest-emotion": "^11.0.0",
     "path": "^0.12.7",
     "prettier": "^1.13.7",
     "prop-types": "^15.6.2",
