--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "css-loader": "^0.28.11",
     "eslint": "^5.0.1",
     "eslint-config-kentcdodds": "^14.0.0",
+    "eslint-import-resolver-jest": "^3.0.0",
     "file-loader": "^1.1.11",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
