--- a/package.json
+++ b/package.json
@@ -21,8 +21,20 @@
     "validate": "npm run lint && npm run build",
     "setup": "npm install && npm run validate"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && npm run build"
+    }
+  },
+  "lint-staged": {
+    "**/*.+(js|json|css|html|md)": [
+      "prettier",
+      "jest --findRelatedTests",
+      "git add"
+    ]
+  },
   "keywords": [],
-  "author": "Kent C. Dodds <kent@doddsfamily.us> (http://kentcdodds.com/)",
+  "author": "tutorial http://kentcdodds.com",
   "license": "GPL-3.0",
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.51",
@@ -44,9 +56,11 @@
     "eslint-config-kentcdodds": "^14.0.0",
     "eslint-import-resolver-jest": "^3.0.0",
     "file-loader": "^1.1.11",
+    "husky": "^6.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-emotion": "^11.0.0",
+    "lint-staged": "^10.5.4",
     "path": "^0.12.7",
     "prettier": "^1.13.7",
     "prop-types": "^15.6.2",
