--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
     "postbuild": "cp ./public/index.html ./dist/index.html",
     "start": "serve --no-clipboard --listen 8080 dist",
     "lint": "eslint .",
-    "format": "prettier \"**/*.js\" --write",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|json|css|html|md)\"",
     "validate": "npm run lint && npm run build",
-    "setup": "npm install && npm run validate"
+    "setup": "npm install && npm run validate",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "**/*.+(js|json|css|html|md)": [
+      "prettier",
+      "jest --findRelatedTests"
+    ]
   },
   "keywords": [],
   "author": "Kent C. Dodds <kent@doddsfamily.us> (http://kentcdodds.com/)",
@@ -39,9 +46,11 @@
     "eslint-config-kentcdodds": "^14.0.0",
     "eslint-import-resolver-jest": "^3.0.0",
     "file-loader": "^1.1.11",
+    "husky": "^6.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-emotion": "^11.0.0",
+    "lint-staged": "^10.5.4",
     "path": "^0.12.7",
     "prettier": "^1.13.7",
     "prop-types": "^15.6.2",
